<resources>
    <string name="app_name">Burner Board</string>
    <string name="bb_hello">Burner Board</string>
    <string name="bb_voltage">Voltage</string>
    <string name="bb_boardlights">Board Lights</string>
    <string name="bb_headlight">Head Light</string>
    <string name="bb_music">Music</string>
    <string name="bb_status">LEDs Status: </string>
    <string name="bb_status_disconnected">Disconnected</string>
    <string name="bb_status_connected">Connected to </string>
    <string name="bb_syncreplies">Music Server sync-replies</string>
    <string name="bb_syncadjust">Music Player Correction</string>
    <string name="bb_syncstatus">Music Player Status: </string>
    <string name="bb_syncpeers">Music Player Peers: </string>
    <string name="bb_synctrack">Music Player Track: </string>
    <string name="bb_syncsrvoff">Music Server Time Offset: </string>
    <string name="bb_syncusroff">Music Player User Offset: </string>
    <string name="bb_syncrtt">Music Server Round-trip-time: </string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
