<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.richardmcdougall.bb.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bb_status"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bb_status_disconnected"
        android:id="@+id/textViewStatus"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/bb_voltage"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0v"
            android:id="@+id/textViewVoltage"
            android:textStyle="bold"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textViewVoltage"
            android:paddingRight="10dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/switchHeadlight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:showText="true"
            android:text="@string/bb_headlight" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switchDecklight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:showText="true"
            android:text="@string/bb_boardlights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switchMusic"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:showText="true"
            android:text="@string/bb_music" />

    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="bottom"
        android:layout_margin="20px"
        android:nestedScrollingEnabled="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextLog"
        android:maxLines="4"
        android:minLines="4"
        android:layout_gravity="top"
        android:layout_weight="1.03"
        android:nestedScrollingEnabled="true"
        android:scrollIndicators="right" />


</LinearLayout>
